# tool-locker

./: .gitignore  Cargo.toml  README.md  artifacts.json  changelog.rss  dist-workspace.toml  index.html  oranda.json  tlk-installer.ps1.txt  tlk-installer.sh.txt  tlk.toml
.github/workflows/: release.yml  web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.1/: index.html
changelog/v0.1.3/: index.html
changelog/v0.1.4/: index.html
changelog/v0.1.5/: index.html
changelog/v0.1.6/: index.html
cli/: Cargo.toml  tlk.toml
cli/src/: cli.rs  config.rs  installer.rs  known_tools.rs  lock.rs  main.rs  ops.rs  versioning.rs
cli/src/command_handlers/: dispatch.rs  install.rs  migrate.rs  migrate_config.rs  mod.rs  uninstall.rs
cli/src/platform/: mod.rs  unix.rs  windows.rs
cli/wix/: main.wxs
src/: custom_tools.rs  installer.rs  known_tools.rs  unknown_tools.rs
src/command_handlers/: diagnose.rs  dispatch.rs  hook.rs  install.rs  setup.rs  specs.rs
src/platform/: unix.rs
