[workspace.package]
name = "Tool Locker"
version = "0.1.6"
edition = "2021"
authors = ["Cody Spate <cody@spate.dev>"]
license = "MIT OR Apache-2.0"
description = "Tool Locker (tlk): manage non-language specific tool binaries from tlk.toml"
repository = "https://github.com/codyspate/tool-locker"


[workspace]
name = "Tool Locker"
resolver = "2"
members = ["cli"]


# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
