[package]
name = "tlk"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[package.metadata.wix]
upgrade-guid = "E553393A-D0F7-4A46-87A4-4BB9CAEE7F91"
path-guid = "287EDCC6-5CB7-422D-8D7E-9DF00CA06688"
license = false
eula = false

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = [
    "blocking",
    "json",
    "native-tls-vendored",
] }
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
which = "6.0"
semver = "1.0"
thiserror = "1.0"
fs-err = "2.11"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
regex = "1"
once_cell = "1"
dirs = "5"

[[bin]]
name = "tlk"
